--- a/client/src/styles/_mobile.scss
+++ b/client/src/styles/_mobile.scss
@@ -34,8 +34,18 @@
     #new-invoice-modal {
       #tester-for-modal {
         padding: 20px 20px 20px 20px;
-        height: calc(100vh - 140px);
+        height: calc(100vh - 225px);
         margin-top: 100px;
+        border-radius: 0px 20px 0px 0px;
+      }
+
+      #tester {
+        padding-left: 20px;
+        padding-top: 20px;
+        width: 50vw;
+        min-width: 300px;
+        height: 50px;
+        border-radius: 0px 0px 20px 0px;
       }
     }
 
@@ -171,7 +181,7 @@
         padding-top: 20px;
         width: 90vw;
         min-width: 300px;
-        height: calc(100vh - 110px);
+        height: calc(100vh - 194px);
 
         #ni-bill-from {
           #street-address {
@@ -284,6 +294,13 @@
             }
           }
         }
+      }
+      #tester {
+        padding-left: 20px;
+        padding-top: 20px;
+        width: 90vw;
+        min-width: 300px;
+        height: 50px;
 
         #ni-bot-btns {
           display: flex;
@@ -396,6 +413,7 @@
       }
 
       #details-card {
+        margin-bottom: 80px;
         padding: 20px;
         #top-details {
           height: 470px;
@@ -495,6 +513,7 @@
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
+        box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.1);
 
         &.dark {
           background: #1e2139;
