--- a/client/src/styles/_mobile.scss
+++ b/client/src/styles/_mobile.scss
@@ -2,7 +2,6 @@
 @media (max-width: 900px) {
   #main-app {
     height: 100vh;
-    // justify-content: flex-start;
     #navbar {
       height: 100px;
       width: 100vw;
@@ -31,8 +30,8 @@
       margin-top: 160px;
     }
 
-    #new-invoice-modal {
-      #tester-for-modal {
+    #invoice-modal {
+      #invoice-modal-form {
         padding: 20px 20px 20px 20px;
         height: calc(100vh - 225px);
         margin-top: 100px;
@@ -40,7 +39,7 @@
         margin-bottom: -2.5px;
       }
 
-      #tester {
+      #invoice-modal-submit-btns {
         padding: 20px 20px 20px 20px;
         border-radius: 0px 0px 20px 0px;
 
@@ -82,6 +81,10 @@
       width: 700px;
     }
 
+    .new-invoice-modal-container {
+      margin-top: 212px;
+    }
+
     #details-container {
       width: 700px;
       margin-top: 160px;
@@ -104,7 +107,6 @@
 // // Phones
 @media (max-width: 500px) {
   #main-app {
-    // justify-content: flex-start;
     #navbar {
       position: fixed;
       height: 70px;
@@ -181,7 +183,7 @@
         #filter-dropdown {
           width: 80px;
           margin-right: 20px;
-          #heading-arrow {
+          #header-arrow {
             #filter-title {
               display: none;
             }
@@ -202,9 +204,9 @@
       }
     }
 
-    #new-invoice-modal {
+    #invoice-modal {
       width: 100vw;
-      #tester-for-modal {
+      #invoice-modal-form {
         margin-bottom: 0;
         margin-top: 70px;
         padding-left: 20px;
@@ -325,7 +327,7 @@
           }
         }
       }
-      #tester {
+      #invoice-modal-submit-btns {
         padding-left: 20px;
         padding-top: 20px;
         width: 90vw;
@@ -418,7 +420,6 @@
     #details-container {
       width: 90%;
       margin-top: 110px;
-      // margin-bottom: 40px;
 
       #details-header {
         padding-left: 20px;
@@ -615,6 +616,10 @@
           margin-left: 20px;
         }
       }
+    }
+
+    .new-invoice-modal-container {
+      margin-top: 155px;
     }
   }
 }
