--- a/client/src/styles/_utilities.scss
+++ b/client/src/styles/_utilities.scss
@@ -1,5 +1,6 @@
 // Utilities
 
+// CSS transitions
 .fade-appear {
   opacity: 0;
 }
@@ -137,6 +138,15 @@ input {
   position: absolute;
   overflow: hidden;
   z-index: 4;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+
+  // &:hover {
+  //   opacity: 1;
+  // }
+}
+.fade-in {
+  opacity: 1;
 }
 
 // Buttons on Form
@@ -173,10 +183,9 @@ input[type='email'] {
   }
 }
 
-// New/Edit Invoice Modal
-#new-invoice-modal {
-  #tester-for-modal {
-    // position: absolute;
+// Invoice Modal
+#invoice-modal {
+  #invoice-modal-form {
     position: relative;
     height: calc(100vh - 160px);
     width: 35vw;
@@ -195,7 +204,7 @@ input[type='email'] {
     &.dark {
       background: #141625;
     }
-    #new-invoice-title {
+    #invoice-modal-title {
       font-size: 24px;
       line-height: 32px;
       font-weight: 700;
@@ -436,7 +445,7 @@ input[type='email'] {
     }
   }
 
-  #tester {
+  #invoice-modal-submit-btns {
     position: relative;
     height: 50px;
     width: 35vw;
@@ -444,12 +453,7 @@ input[type='email'] {
     top: 0;
     left: 0;
     background: #ffffff;
-    // border-radius: 0px 20px 20px 0px;
     padding: 20px 50px 20px 150px;
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: flex-start;
-    // overflow-y: auto;
     z-index: 5;
     box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.1);
     border-radius: 0px 0px 20px 0px;
@@ -458,11 +462,6 @@ input[type='email'] {
       background: #141625;
     }
     #ni-bot-btns {
-      // border: solid 2px red;
-      // position: absolute;
-      // bottom: 0;
-      // width: 72%;
-
       #ni-btns {
         display: flex;
         justify-content: space-between;
@@ -559,7 +558,6 @@ input[type='email'] {
   height: 250px;
   width: 480px;
   background: #ffffff;
-  box-shadow: rgba(72, 84, 159, 0.100397);
   border-radius: 8px;
   padding: 50px;
   display: flex;
@@ -656,6 +654,11 @@ input[type='email'] {
 // Make Background Fixed on Modal Open
 .modal-container {
   position: fixed;
+}
+
+.new-invoice-modal-container {
+  position: fixed;
+  margin-top: 120px;
 }
 
 // Alert State Border
