--- a/client/src/styles/_mobile.scss
+++ b/client/src/styles/_mobile.scss
@@ -28,6 +28,13 @@
     #header {
       width: 700px;
       margin-top: 160px;
+      align-items: flex-start;
+
+      #header-left {
+        #mobile-title {
+          line-height: 2rem;
+        }
+      }
     }
 
     #invoice-modal {
@@ -79,6 +86,7 @@
 
     #invoices {
       width: 700px;
+      padding-bottom: 35px;
     }
 
     .new-invoice-modal-container {
@@ -372,6 +380,7 @@
 
     #invoices {
       width: 90%;
+      padding-bottom: 10px;
 
       #invoice-list {
         .invoice-item {
@@ -619,7 +628,7 @@
     }
 
     .new-invoice-modal-container {
-      margin-top: 155px;
+      margin-top: 156px;
     }
   }
 }
