fixing duplicate id error

--- a/client/src/styles/_utilities.scss
+++ b/client/src/styles/_utilities.scss
@@ -26,7 +26,7 @@
 }
 
 // Paid Label
-#paid {
+[id^='paid--'] {
   background: rgba(51, 214, 159, 0.06);
 
   .dot {
@@ -39,7 +39,7 @@
 }
 
 // Pending Label
-#pending {
+[id^='pending--'] {
   background: rgba(255, 143, 0, 0.06);
 
   .dot {
@@ -52,7 +52,7 @@
 }
 
 // Draft Label
-#draft {
+[id^='draft--'] {
   background: rgba(55, 59, 83, 0.06);
 
   .dot {
