--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -98,12 +98,12 @@ body {
 
     #prof-pic {
       position: absolute;
-      height: 40px;
-      width: 40px;
+      height: 70px;
+      width: 70px;
       border-radius: 50%;
-      left: 30px;
-      bottom: 24px;
-      background-image: url(images/prof-pic.jpg);
+      left: 15px;
+      bottom: 8px;
+      background-image: url(images/prof-pic-resize.jpg);
     }
   }
 
